--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     background: #1482b9;
-    border: 2px solid var(--h3-menuborder-footerbg);
+    /*border: 2px solid var(--h3-menuborder-footerbg);*/
     color: #ebebeb;
     text-align: center;
     font-family: "Baumans", sans-serif;
@@ -142,10 +142,12 @@ body {
     align-items: center;
     justify-content: center;
     background-image: url('../images/background.jpg');
+    /*height: 500px;*/
     min-height: 80vh;
     background-size: cover;
-    /*background-position: center;*/
+    background-position: center;
     background-attachment: fixed;
+    /*background-repeat: no-repeat;*/
 }
 
 @media (min-width: 540px) {
